Added main content

--- a/src/assets/styles/settings.scss
+++ b/src/assets/styles/settings.scss
@@ -2,8 +2,10 @@ $gray-color: #a9a8a8;
 $gray-light-color: #ececec;
 $gray-dark-color: #696969;
 $black-color: #2c3e50;
+$white-color: #ffffff;
 $gold-color: #f9d208;
-$green-color: LightGreen;
+$green-color: #42b983;
 
 $font-stack:    'Avenir', Helvetica, Arial, sans-serif;
-$main-font-size: 14px;
+$html-font-size: 10px;
+$main-font-size: 1.6rem;
