--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,11 @@
+html {  
+   font-size: $html-font-size; 
+}
+
+dl, ol, ul {   
+    margin-bottom: 0;
+}
+
 .image-container {
     width: 100%;
     height: auto;
@@ -5,7 +13,6 @@
     margin: 0 auto;
     padding: 0;
 }
-
 .image-container img {
     max-width: 100%;
     height: auto;
