Added content for about page

--- a/src/assets/styles/settings.scss
+++ b/src/assets/styles/settings.scss
@@ -5,6 +5,7 @@ $black-color: #2c3e50;
 $white-color: #ffffff;
 $gold-color: #f9d208;
 $green-color: #42b983;
+$blue-color: #99ccff;
 
 $font-stack:    'Avenir', Helvetica, Arial, sans-serif;
 $html-font-size: 10px;
