--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,3 +19,33 @@ dl, ol, ul {
     display: block;
     margin: 0 auto;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.margin-top-10 {
+    margin-top: 10px;
+}
+.margin-top-20 {
+margin-top: 20px;
+}
+.margin-top-30 {
+margin-top: 30px;
+}
+.margin-top-40 {
+margin-top: 40px;
+}
+
+.margin-bottom-10 {
+margin-bottom: 10px;
+}
+.margin-bottom-20 {
+margin-bottom: 20px;
+}
+.margin-bottom-30 {
+margin-bottom: 30px;
+}
+.margin-bottom-40 {
+margin-bottom: 40px;
+}
