--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -23,6 +23,12 @@ dl, ol, ul {
 .text-center {
     text-align: center;
 }
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+}
 
 .margin-top-10 {
     margin-top: 10px;
