added selection style and Page Preloader Component

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,6 +2,10 @@ html {
    font-size: $html-font-size; 
 }
 
+::selection {    
+    background: #f2e4b9;
+}
+
 dl, ol, ul {   
     margin-bottom: 0;
 }
