corrected navbar component

--- a/src/assets/styles/settings.scss
+++ b/src/assets/styles/settings.scss
@@ -10,3 +10,9 @@ $blue-color: #99ccff;
 $font-stack:    'Avenir', Helvetica, Arial, sans-serif;
 $html-font-size: 10px;
 $main-font-size: 1.6rem;
+
+/* more or equal to */
+$sm-screen: 576px;
+$md-screen: 768px;
+$lg-screen: 992px;
+$xl-screen: 1200px;
